<resources>
    <string name="app_name">EspressoTest</string>
    <string name="hint_note">Note title</string>
    <string name="hint_note_content">Note message</string>
    <string name="add_note">Add note</string>
</resources>
